<resources>
    <string name="app_name">pmdm-t4-01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Definición del menú de acciones -->
    <string name="action_navegador_web">Abrir navegador web</string>
    <string name="action_marcador_llamada">Marcador teléfonico</string>
    <string name="action_llamada_numero">Marcar número emergencias 123</string>
    <string name="action_llamada">Llamar a emergencias 123</string>
    <string name="action_mensaje_sms">Enviar SMS de emergencia</string>
    <string name="action_mensaje_compartir">Compartir emergencia</string>


</resources>