<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_llamada"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_llamada" />

        <item
            android:id="@+id/action_llamada_numero"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_llamada_numero" />

        <item
            android:id="@+id/action_marcador_llamada"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_marcador_llamada" />

        <item
            android:id="@+id/action_mensaje_compartir"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_mensaje_compartir" />

        <item
            android:id="@+id/action_mensaje_sms"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_mensaje_sms" />

        <item
            android:id="@+id/action_navegador_web"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_navegador_web" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_settings"/>

    </group>
</menu>